# pyQuadriFlow

./: .gitignore  ctypes_quadriflow.cpp  makefile  pyQuadriFlow.sln  readme.md
ctypes_QuadriFlow/: Source.cpp  ctypes_QuadriFlow.vcxproj
package/: README.md  pyproject.toml  setup.py
package/pyQuadriFlow/clib/: load_library.py
package/src/pyQuadriFlow/: pyQuadriFlow.py
package/src/pyQuadriFlow/clib/: load_library.py
